# VEEX1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ENGINE_PLAN.md  FORWARD_RENDERER_FIXES.md  HOW TO COMPILE:BUILD.txt  LICENSE  MDL_IMPLEMENTATION_SUMMARY.md  MDL_INTEGRATION_GUIDE.md  Makefile  PBR_LITE_SYSTEMS_REWORK.md  README.md  SEGFAULT_FIX_SUMMARY.md  allfiles.txt  build_darwin.sh  build_windows.sh  cmake_install.cmake  mingw_toolchain.cmake
Engine/: CMakeLists.txt  Makefile  cmake_install.cmake
Engine ShaderKit/: CMakeLists.txt  gameinfobin.txt
Engine ShaderKit/include copy/veex/: BSP.h  Client.h  Common.h  Shader.h
Engine ShaderKit/include/veex/: BSP.h  BSPParser.h  BinfoParser.h  Entity.h  MaterialSystem.h  Model.h  PlayerController.h  Renderer.h  Shader.h  Texture.h
Engine ShaderKit/shaders/: basic.frag  basic.vert  debug_tangents.geom  vr_standard.frag  vr_standard.vert
Engine ShaderKit/src/: BSP.cpp  BinfoParser.cpp  CAMERA_NOTE.txt  Client.cpp  MaterialSystem.cpp  PropStaticEntity.cpp  Renderer.cpp  Server.cpp  Shader.cpp  Skybox.cpp
Engine ShaderKit/src copy/: Application.cpp  Camera.cpp  Client.cpp  FileSystem.cpp  GameInfo.cpp  KeyValues.cpp  Renderer.cpp
Engine ShaderKit/src copy 2/: Application.cpp  BSP.cpp  BSPParser.cpp  Client.cpp  FileSystem.cpp  MaterialSystem.cpp  Model.cpp  PlayerController.cpp  Renderer.cpp  Server.cpp  Skybox.cpp
Engine ShaderKit/src copy 3/: Application.cpp  BSP.cpp  BSPParser.cpp  Camera.cpp  Client.cpp  GameInfo.cpp  PlayerController.cpp  Renderer.cpp  Server.cpp  Texture.cpp
Engine copy/: CMakeLists.txt  GameInfoTest  Makefile  cmake_install.cmake
Engine copy/Game/: MAPorder.ORDE  Makefile
Engine copy/include/veex/: AmbientGeneric.h  Application.h  BSP.h  BSPParser.h  BSPTexturePacker.h  Common.h  DepthMapGenerator.h  Entity.h  EntityParser.h  Face.h  FuncDoor.h  GLHeaders.h  GUI.h  LightmapSystem.h  MDL.h  MainMenu.h  MaterialSystem.h  MegaTexture.h  MegaTextureCache.h  PlayerController.h  PropStaticEntity.h  RenderGraph.h  Renderer.h  Shader.h  Skybox.h  Texture.h  TextureAtlas.h  VMTLoader.h  VPK.h  VTFLoader.h
Engine copy/shaders/: gbuffer.vert  gui.frag  lighting.frag  skybox.frag  skybox.vert  vr_standard.frag  vr_standard.vert
Engine copy/src/: Application.cpp  BSP.cpp  BSPParser.cpp  Config.cpp  DXTCompressor.cpp  DepthMapAtlas.cpp  DualTextureAtlas.cpp  Face.cpp  FileSystem.cpp  LightmapSystem.cpp  MDL.cpp  MainMenu.cpp  MaterialSystem.cpp  MegaTexture.cpp  MegaTextureCache.cpp  Model.cpp  NanoGUIAdapter.cpp  PauseMenu.cpp  PropDynamicEntity.cpp  PropStaticEntity.cpp  ReflectionProbe.cpp  Renderer.cpp  Server.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  TextureAtlas.cpp  VMTLoader.cpp  VPK.cpp  VTFLoader.cpp  main.cpp  miniaudio_impl.cpp  test_megatexture.cpp
Engine/Game/: cmake_install.cmake  gameinfo.txt
Engine/Game/materials/brick/: brickfloor001a.vmt  brickwall053a.vmt
Engine/include copy/veex/: BSPParser.h  BinfoTypes.h  Config.h  Entity.h  KeyValues.h  MaterialSystem.h  Renderer.h  Server.h  Skybox.h
Engine/include/veex/: Application.h  BSP.h  BSPParser.h  Camera.h  Client.h  Common.h  ComputeShader.h  Config.h  DXTCompressor.h  DepthMapAtlas.h  DualTextureAtlas.h  Entity.h  FileSystem.h  GLHeaders.h  GUI.h  GameInfo.h  LightmapSystem.h  Logger.h  MDL.h  MainMenu.h  MaterialSystem.h  Model.h  NanoGUIAdapter.h  PauseMenu.h  PropDynamicEntity.h  PropStaticEntity.h  ReflectionProbe.h  Renderer.h  Server.h  Shader.h  SoundKit.h  TileRenderer.h  VPK.h  VTFLoader.h
Engine/shaders/: gbuffer.frag  gui.vert  lighting.vert  vr_standard.frag  vr_standard.vert
Engine/src/: AmbientGeneric copy.cpp  AmbientGeneric.cpp  Application.cpp  BSP.cpp  BSPParser.cpp  BSPTexturePacker.cpp  Client.cpp  DepthMapGenerator.cpp  Entity.cpp  EntityParser.cpp  FileSystem.cpp  GUI.cpp  GameInfo.cpp  LightmapSystem.cpp  MDL.cpp  MainMenu.cpp  MaterialSystem.cpp  Model.cpp  PauseMenu.cpp  PlayerController.cpp  PropDynamicEntity.cpp  PropStaticEntity.cpp  ReflectionProbe.cpp  RenderGraph.cpp  Renderer.cpp  Server.cpp  Shader.cpp  SoundKit.cpp  TileRenderer.cpp  VPK.cpp  VTFLoader.cpp  test_gameinfo.cpp  test_reflection_probes.cpp
Engine/src copy/: BSP.cpp  Server.cpp  Shader.cpp  main.cpp
Game/: CMakeLists.txt  cmake_install.cmake  gameinfo.txt
Game/platform/misc/: settings.txt
